--- a/apps/admin-gui/src/app/app.component.html
+++ b/apps/admin-gui/src/app/app.component.html
@@ -3,7 +3,7 @@
 </div>
 <app-perun-nav-menu
   id="nav-menu"
-  [ngStyle]="{'top': getNavMenuTop()}"
+  [ngStyle]="{'top': getNavMenuTop(), 'background': navBackgroundColor}"
   class="mat-elevation-z3"
   [sideNav]="sidenav"
   [principal]="principal">
@@ -14,6 +14,7 @@
   [ngStyle]="{'margin-top': getSideNavMarginTop(),'min-height': getSideNavMinHeight()}"
 >
   <mat-sidenav #sidenav
+               [ngStyle]="{'border-color': sideBarBorderColor}"
                [mode]="sidebarMode"
                [opened]="true"
                [fixedInViewport]="true"
