--- a/apps/admin-gui/src/app/shared/side-menu/side-menu-root-item/side-menu-root-item.component.html
+++ b/apps/admin-gui/src/app/shared/side-menu/side-menu-root-item/side-menu-root-item.component.html
@@ -1,7 +1,7 @@
 <div class="entity-menu-item">
-  <div class="entity-menu-item-header {{getBgClass()}}" (click)="toggle()">
+  <div class="entity-menu-item-header" [ngStyle]="{'background': item.backgroundColorCss}" (click)="toggle()">
     <div class="entity-menu-item-link {{item.labelClass}}">
-      <a class="entity-menu-item-label">
+      <a class="entity-menu-item-label" [ngStyle]="{'color': item.textColorCss}">
         <div>
           <img
             src="assets/img/PerunWebImages/{{item.icon}}"
@@ -18,15 +18,17 @@
   </div>
 
   <div [@openClose]="expanded ? 'open' : 'closed'">
-    <div class="side-entity-menu {{item.linksClass}}">
+    <div class="side-entity-menu {{item.linksClass}}" [ngStyle]="{'background': linkBgColor}">
       <div *ngFor="let link of item.links">
         <a (click)="navigate(link.url)"
+           [ngStyle]="{'color': linkTextColor, 'border-color': linkTextColor}"
            [class.activated]="isActive(currentUrl, link.activatedRegex) && item.activatedClass === undefined"
            [ngClass]="isActive(currentUrl, link.activatedRegex) && item.activatedClass !== undefined ? item.activatedClass : ''">
           {{link.label | translate}}
         </a>
         <div @rollInOut *ngIf="isActive(currentUrl, link.showChildrenRegex)">
           <a (click)="navigate(child.url)"
+             [ngStyle]="{'color': linkTextColor, 'border-color': linkTextColor}"
              class="pl-5" *ngFor="let child of link?.children"
              [class.activated]="isActive(currentUrl, child.activatedRegex) && item.activatedClass === undefined"
              [ngClass]="isActive(currentUrl, child.activatedRegex) && item.activatedClass !== undefined ? item.activatedClass : ''">
