--- a/apps/admin-gui/src/styles.scss
+++ b/apps/admin-gui/src/styles.scss
@@ -865,7 +865,7 @@ button:focus {
 }
 
 .mat-drawer-inner-container {
-  background-color: mat-color($mat-blue-grey, 900);
+  //background-color: mat-color($mat-blue-grey, 900);
 }
 
 .filter-field {
@@ -886,8 +886,4 @@ button:focus {
   height: 0 !important;
   overflow: hidden !important;
   border: none !important;
-}
-
-.mat-drawer-side {
-  border-right: solid 1px #071e24 !important;
 }
