Redesigned side menu
* Added ripple to side menu items to match the overall material design.

* Changed padding to reduce the size of side menus.

--- a/apps/admin-gui/src/app/app.component.html
+++ b/apps/admin-gui/src/app/app.component.html
@@ -25,7 +25,8 @@
 
   <mat-sidenav-content id="content-inner"
     [ngStyle]="{
-       'min-height' : getContentInnerMinHeight()
+       'min-height' : getContentInnerMinHeight(),
+       'background-color': contentBackgroundColor
     }">
     <div id="content-wrap">
       <router-outlet></router-outlet>
