--- a/apps/admin-gui/src/app/shared/perun-nav/perun-nav.component.html
+++ b/apps/admin-gui/src/app/shared/perun-nav/perun-nav.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button
           class="mr-2 mt-auto mb-auto"
           (click)="sideNav.toggle()">
-    <mat-icon>
+    <mat-icon [ngStyle]="{'color': iconColor}">
       menu
     </mat-icon>
   </button>
@@ -13,13 +13,16 @@
 
 <div id="nav-menu-user-info" [ngStyle]="{'color': navTextColor}">
   <button mat-icon-button (click)="showNotificationHistory()" [matTooltip]="'NAV.NOTIFICATIONS_TOOLTIP'|translate">
-    <mat-icon matBadge="{{getNewNotificationsCount() > 5 ? '5+' : getNewNotificationsCount()}}" matBadgeColor="warn" [matBadgeHidden]="getNewNotificationsCount() === 0">
+    <mat-icon [ngStyle]="{'color': iconColor}"
+              matBadge="{{getNewNotificationsCount() > 5 ? '5+' : getNewNotificationsCount()}}"
+              matBadgeColor="warn"
+              [matBadgeHidden]="getNewNotificationsCount() === 0">
       {{getNewNotificationsCount() ? 'notifications_active' : 'notifications'}}
     </mat-icon>
   </button>
 
   <button mat-button [matMenuTriggerFor]="menu">
-    <mat-icon>
+    <mat-icon [ngStyle]="{'color': iconColor}">
       person
     </mat-icon>
     <span class="d-none d-lg-inline">
