--- a/apps/admin-gui/src/app/shared/side-menu/side-menu-item/side-menu-item.component.html
+++ b/apps/admin-gui/src/app/shared/side-menu/side-menu-item/side-menu-item.component.html
@@ -1,12 +1,9 @@
 <div class="entity-menu-item">
-  <div class="entity-menu-item-header" [ngStyle]="{'background': item.backgroundColorCss}" (click)="toggle()">
-    <div class="entity-menu-item-link {{item.labelClass}}">
+  <div class="entity-menu-item-header" matRipple [ngStyle]="{'background': item.backgroundColorCss}" (click)="toggle()">
+    <div class="entity-menu-item-link {{item.labelClass}}" matRipple>
       <a class="entity-menu-item-label" [ngStyle]="{'color': item.textColorCss}">
         <div>
-          <img
-            src="assets/img/PerunWebImages/{{item.icon}}"
-            class="entity-menu-item-icon"
-            alt="{{item.label | translate}}">
+          <mat-icon [ngStyle]="{'color': iconColor}" [svgIcon]="item.icon" class="perun-icon"></mat-icon>
         </div>
         <div class="ml-3">{{item.label | translate}}</div>
       </a>
@@ -17,13 +14,15 @@
     <div class="side-entity-menu {{item.linksClass}}" [ngStyle]="{'background': linkBgColor}">
       <div *ngFor="let link of item.links">
         <a (click)="navigate(link.url)"
+           matRipple
            [ngStyle]="{'color': linkTextColor, 'border-color': linkTextColor}"
            [class.activated]="isActive(currentUrl, link.activatedRegex) && item.activatedClass === undefined"
            [ngClass]="isActive(currentUrl, link.activatedRegex) && item.activatedClass !== undefined ? item.activatedClass : ''">
           {{link.label | translate}}
         </a>
         <div class="entity-menu-item-sub-menu" @rollInOut *ngIf="isActive(currentUrl, link.showChildrenRegex)">
-          <a class="pl-5" *ngFor="let child of link?.children"
+          <a class="entity-menu-item-sub-menu-item" *ngFor="let child of link?.children"
+             matRipple
              [ngStyle]="{'color': linkTextColor, 'border-color': linkTextColor}"
              (click)="navigate(child.url)"
              [class.activated]="isActive(currentUrl, child.activatedRegex) && item.activatedClass === undefined"
