Added global table size options
* Added a constant for the whole app with table size options.

--- a/apps/admin-gui/src/app/shared/components/entityless-attribute-keys-list/entityless-attribute-keys-list.component.html
+++ b/apps/admin-gui/src/app/shared/components/entityless-attribute-keys-list/entityless-attribute-keys-list.component.html
@@ -91,7 +91,7 @@
           class="dark-hover-list-item">
         </tr>
       </table>
-      <mat-paginator [length]="this.records.length" [pageSize]="5" [pageSizeOptions]="[1,5,10,25]"></mat-paginator>
+      <mat-paginator [length]="this.records.length" [pageSize]="5" [pageSizeOptions]="pageSizeOptions"></mat-paginator>
     </div>
   </div>
 
