--- a/apps/admin-gui/src/app/vos/components/notification-list/notification-list.component.html
+++ b/apps/admin-gui/src/app/vos/components/notification-list/notification-list.component.html
@@ -67,5 +67,5 @@
       class="dark-hover-list-item">
     </tr>
   </table>
-  <mat-paginator [length]="this.applicationMails.length" [pageSize]="10" [pageSizeOptions]="[5,10,25]"></mat-paginator>
+  <mat-paginator [length]="this.applicationMails.length" [pageSize]="10" [pageSizeOptions]="pageSizeOptions"></mat-paginator>
 </div>
