--- a/apps/admin-gui/src/app/facilities/components/facility-select-table/facility-select-table.component.html
+++ b/apps/admin-gui/src/app/facilities/components/facility-select-table/facility-select-table.component.html
@@ -42,7 +42,7 @@
         class="dark-hover-list-item">
       </tr>
     </table>
-    <mat-paginator [length]="this.facilities.length" [pageSize]="10" [pageSizeOptions]="[5,10,25]"></mat-paginator>
+    <mat-paginator [length]="this.facilities.length" [pageSize]="10" [pageSizeOptions]="pageSizeOptions"></mat-paginator>
   </div>
 </div>
 
