--- a/apps/admin-gui/src/app/shared/components/ext-sources-list/ext-sources-list.component.html
+++ b/apps/admin-gui/src/app/shared/components/ext-sources-list/ext-sources-list.component.html
@@ -48,7 +48,7 @@
       </tr>
     </table>
     <mat-paginator [length]="this.extSources.length" [pageSize]="pageSize"
-                   [pageSizeOptions]="[5,10,25]"></mat-paginator>
+                   [pageSizeOptions]="pageSizeOptions"></mat-paginator>
   </div>
 </div>
 
