--- a/apps/admin-gui/src/app/shared/components/members-candidates-list/members-candidates-list.component.html
+++ b/apps/admin-gui/src/app/shared/components/members-candidates-list/members-candidates-list.component.html
@@ -76,7 +76,7 @@
         *matRowDef="let memberCandidate; columns: displayedColumns;">
       </tr>
     </table>
-    <mat-paginator [length]="this.members.length" [pageSize]="10" [pageSizeOptions]="[5,10,25]"></mat-paginator>
+    <mat-paginator [length]="this.members.length" [pageSize]="10" [pageSizeOptions]="pageSizeOptions"></mat-paginator>
   </div>
 </div>
 
