--- a/apps/admin-gui/src/app/shared/components/resources-tags-list/resources-tags-list.component.html
+++ b/apps/admin-gui/src/app/shared/components/resources-tags-list/resources-tags-list.component.html
@@ -71,7 +71,7 @@
           class="dark-hover-list-item">
       </tr>
     </table>
-    <mat-paginator [length]="this.resourceTags.length" [pageSize]="10" [pageSizeOptions]="[5,10,25]"></mat-paginator>
+    <mat-paginator [length]="this.resourceTags.length" [pageSize]="10" [pageSizeOptions]="pageSizeOptions"></mat-paginator>
   </div>
 </div>
 
