--- a/apps/admin-gui/src/app/shared/components/users-list/users-list.component.html
+++ b/apps/admin-gui/src/app/shared/components/users-list/users-list.component.html
@@ -56,7 +56,7 @@
         class="dark-hover-list-item">
       </tr>
     </table>
-    <mat-paginator [length]="this.users.length" [pageSize]="10" [pageSizeOptions]="[5,10,25]"></mat-paginator>
+    <mat-paginator [length]="this.users.length" [pageSize]="10" [pageSizeOptions]="pageSizeOptions"></mat-paginator>
   </div>
 </div>
 
