--- a/apps/admin-gui/src/app/vos/components/applications-list/applications-list.component.html
+++ b/apps/admin-gui/src/app/vos/components/applications-list/applications-list.component.html
@@ -66,7 +66,7 @@
         class="dark-hover-list-item">
       </tr>
     </table>
-    <mat-paginator [length]="this.applications.length" [pageSize]="10" [pageSizeOptions]="[5,10,25]"></mat-paginator>
+    <mat-paginator [length]="this.applications.length" [pageSize]="10" [pageSizeOptions]="pageSizeOptions"></mat-paginator>
   </div>
 </div>
 
