--- a/libs/perun/components/src/lib/attributes-list/attributes-list.component.html
+++ b/libs/perun/components/src/lib/attributes-list/attributes-list.component.html
@@ -66,7 +66,7 @@
         class="dark-hover-list-item">
       </tr>
     </table>
-    <mat-paginator [length]="this.attributes.length" [pageSize]="5" [pageSizeOptions]="[5,10,25]"></mat-paginator>
+    <mat-paginator [length]="this.attributes.length" [pageSize]="5" [pageSizeOptions]="pageSizeOptions"></mat-paginator>
   </div>
 </div>
 
