--- a/libs/perun/components/src/lib/groups-list/groups-list.component.html
+++ b/libs/perun/components/src/lib/groups-list/groups-list.component.html
@@ -65,7 +65,7 @@
         class="dark-hover-list-item">
       </tr>
     </table>
-    <mat-paginator [length]="this.groups.length" [pageSize]="this.pageSize" [pageSizeOptions]="[5,10,25]"></mat-paginator>
+    <mat-paginator [length]="this.groups.length" [pageSize]="this.pageSize" [pageSizeOptions]="pageSizeOptions"></mat-paginator>
   </div>
 </div>
 
