--- a/libs/perun/components/src/lib/resources-list/resources-list.component.html
+++ b/libs/perun/components/src/lib/resources-list/resources-list.component.html
@@ -55,7 +55,7 @@
         class="dark-hover-list-item">
       </tr>
     </table>
-    <mat-paginator [length]="this.resources.length" [pageSize]="10" [pageSizeOptions]="[5,10,25]"></mat-paginator>
+    <mat-paginator [length]="this.resources.length" [pageSize]="10" [pageSizeOptions]="pageSizeOptions"></mat-paginator>
   </div>
 </div>
 
