--- a/libs/perun/components/src/lib/vo-select-table/vo-select-table.component.html
+++ b/libs/perun/components/src/lib/vo-select-table/vo-select-table.component.html
@@ -45,7 +45,7 @@
         class="dark-hover-list-item">
       </tr>
     </table>
-    <mat-paginator [length]="this.vos.length" [pageSize]="10" [pageSizeOptions]="[5,10,25]"></mat-paginator>
+    <mat-paginator [length]="this.vos.length" [pageSize]="10" [pageSizeOptions]="pageSizeOptions"></mat-paginator>
   </div>
 </div>
 
