Search facility by destination or host
* Added columns 'Destinations' and 'Hosts' displaying destinations and hosts of a facility
* Facility select table now uses EnrichedFacility objects instead of RichFacility
* Generic component for displaying list values of objects was created
* Generic pipe for filtering unique values from list of objects was created

--- a/libs/perun/components/src/lib/facility-select-table/facility-select-table.component.html
+++ b/libs/perun/components/src/lib/facility-select-table/facility-select-table.component.html
@@ -26,7 +26,7 @@
         <ng-container matColumnDef="id">
           <th *matHeaderCellDef mat-header-cell
               mat-sort-header>{{'FACILITY_MANAGEMENT.TABLE.ID' | translate}}</th>
-          <td *matCellDef="let facility" class="static-column-size" mat-cell>{{facility.id}}</td>
+          <td *matCellDef="let facility" class="static-column-size" mat-cell>{{facility.facility.id}}</td>
         </ng-container>
         <ng-container matColumnDef="recent">
           <th *matHeaderCellDef mat-header-cell>
@@ -34,28 +34,48 @@
           <td *matCellDef="let facility" mat-cell>
             <perun-web-apps-recently-viewed-icon
               [recentIds]="recentIds"
-              [id]="facility.id">
+              [id]="facility.facility.id">
             </perun-web-apps-recently-viewed-icon>
           </td>
         </ng-container>
         <ng-container matColumnDef="name">
           <th *matHeaderCellDef mat-header-cell
               mat-sort-header>{{'FACILITY_MANAGEMENT.TABLE.NAME' | translate}}</th>
-          <td *matCellDef="let facility" mat-cell>{{facility.name}}</td>
+          <td *matCellDef="let facility" mat-cell>{{facility.facility.name}}</td>
         </ng-container>
         <ng-container matColumnDef="description">
           <th *matHeaderCellDef mat-header-cell>{{'FACILITY_MANAGEMENT.TABLE.DESCRIPTION' | translate}}</th>
-          <td *matCellDef="let facility" mat-cell>{{facility.description}}</td>
+          <td *matCellDef="let facility" mat-cell>{{facility.facility.description}}</td>
         </ng-container>
         <ng-container matColumnDef="technicalOwners">
           <th *matHeaderCellDef mat-header-cell>{{'FACILITY_MANAGEMENT.TABLE.TECHNICAL_OWNERS' | translate}}</th>
-          <td *matCellDef="let facility" mat-cell>{{facility.facilityOwners | technicalOwners}}</td>
+          <td *matCellDef="let facility" mat-cell>{{facility.owners | technicalOwners}}</td>
+        </ng-container>
+        <ng-container matColumnDef="destinations">
+          <th *matHeaderCellDef mat-header-cell>{{'FACILITY_MANAGEMENT.TABLE.DESTINATIONS' | translate}}</th>
+          <td *matCellDef="let facility" mat-cell>
+            <perun-web-apps-object-list-values
+              (mouseenter)="disableRouting = true"
+              (mouseleave)="disableRouting = false"
+              [paramName]="'destination'"
+              [objects]="facility.destinations | filterUniqueObjects: filterValue:'destination'"></perun-web-apps-object-list-values>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="hosts">
+          <th *matHeaderCellDef mat-header-cell>{{'FACILITY_MANAGEMENT.TABLE.HOSTS' | translate}}</th>
+          <td *matCellDef="let facility" mat-cell>
+            <perun-web-apps-object-list-values
+              (mouseenter)="disableRouting = true"
+              (mouseleave)="disableRouting = false"
+              [paramName]="'hostname'"
+              [objects]="facility.hosts | filterUniqueObjects: filterValue:'hostname'"></perun-web-apps-object-list-values>
+          </td>
         </ng-container>
         <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
         <tr
           *matRowDef="let facility; columns: displayedColumns;"
-          [routerLink]="['/facilities', facility.id]"
-          [perunWebAppsMiddleClickRouterLink]="['/facilities', facility.id]"
+          [routerLink]="disableRouting ? [] : ['/facilities', facility.facility.id]"
+          [perunWebAppsMiddleClickRouterLink]="['/facilities', facility.facility.id]"
           class="dark-hover-list-item"
           mat-row>
         </tr>
