--- a/apps/admin-gui/src/app/shared/components/dialogs/edit-application-form-item-dialog/edit-application-form-item-dialog.component.html
+++ b/apps/admin-gui/src/app/shared/components/dialogs/edit-application-form-item-dialog/edit-application-form-item-dialog.component.html
@@ -86,6 +86,23 @@
                 {{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.REQUIRED_DESCRIPTION' | translate}}
               </div>
             </div>
+            <div *ngIf="typesWithUpdatable.indexOf(this.applicationFormItem.type) > -1">
+              <div class="d-flex">
+                <span class="w-25 font-weight-bold">{{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.UPDATABLE' | translate}}:</span>
+                <div class="w-75">
+                  <section>
+                    <mat-checkbox [(ngModel)]="this.applicationFormItem.updatable">
+                    </mat-checkbox>
+                  </section>
+                </div>
+              </div>
+              <div class="d-flex mb-3">
+                <span class="w-25"></span>
+                <div class="w-75 font-italic text-muted">
+                  {{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.UPDATABLE_DESCRIPTION' | translate}}
+                </div>
+              </div>
+            </div>
             <div class="d-flex">
               <span
                 class="w-25 m-auto font-weight-bold">{{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.SOURCE_ATTRIBUTE' | translate}}
@@ -175,6 +192,92 @@
               <span class="w-25"></span>
               <div class="w-75 font-italic text-muted">
                 {{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.REGEX_DESCRIPTION' | translate}}
+              </div>
+            </div>
+          </div>
+          <!-- Disabled part -->
+          <div *ngIf="typesWithDisabled.indexOf(this.applicationFormItem.type) > -1">
+            <div class="d-flex">
+              <span
+                class="w-25 m-auto font-weight-bold">{{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.DISABLED' | translate}}
+                :</span>
+              <div class="w-75">
+                <mat-form-field class="w-100">
+                  <mat-select [(value)]="applicationFormItem.disabled" disableOptionCentering>
+                    <mat-option *ngFor="let value of disabledValues" [value]="value">
+                      {{value | applicationFormItemDisabled}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="d-flex mb-3">
+              <span class="w-25"></span>
+              <div class="w-75 font-italic text-muted">
+                {{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.DISABLED_DESCRIPTION' | translate}}
+              </div>
+            </div>
+            <div class="d-flex">
+              <span
+                class="w-25 m-auto font-weight-bold">{{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.DISABLED_DEPENDENCY' | translate}}
+                :</span>
+              <div class="w-75">
+                <div class="w-100">
+                  <perun-web-apps-app-form-item-search-select *ngIf="this.disabledDependencyItem !== null"
+                                                              [item]="this.disabledDependencyItem"
+                                                              (itemSelected)="this.disabledDependencyItem=$event"
+                                                              [items]="possibleDependencyItems">
+                  </perun-web-apps-app-form-item-search-select>
+                </div>
+              </div>
+            </div>
+            <div class="d-flex mb-3">
+              <span class="w-25"></span>
+              <div class="w-75 font-italic text-muted">
+                {{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.DISABLED_DEPENDENCY_DESCRIPTION' | translate}}
+              </div>
+            </div>
+          </div>
+          <div>
+            <!-- Hidden part -->
+            <div class="d-flex">
+              <span
+                class="w-25 m-auto font-weight-bold">{{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.HIDDEN' | translate}}
+                :</span>
+              <div class="w-75">
+                <mat-form-field class="w-100">
+                  <mat-select [(value)]="applicationFormItem.hidden" disableOptionCentering>
+                    <mat-option *ngFor="let value of hiddenValues" [value]="value">
+                      {{value | applicationFormItemHidden}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="d-flex mb-3">
+              <span class="w-25"></span>
+              <div class="w-75 font-italic text-muted">
+                {{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.HIDDEN_DESCRIPTION' | translate}}
+              </div>
+            </div>
+            <div class="d-flex">
+              <span
+                class="w-25 m-auto font-weight-bold">{{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.HIDDEN_DEPENDENCY' | translate}}
+                :</span>
+              <div class="w-75">
+                <div class="w-100">
+                  <perun-web-apps-app-form-item-search-select *ngIf="this.hiddenDependencyItem !== null"
+                                                              [item]="this.hiddenDependencyItem"
+                                                              (itemSelected)="this.hiddenDependencyItem=$event"
+                                                              [items]="possibleDependencyItems">
+                  </perun-web-apps-app-form-item-search-select>
+                </div>
+              </div>
+            </div>
+            <div class="d-flex mb-3">
+              <span class="w-25"></span>
+              <div class="w-75 font-italic text-muted">
+                {{'DIALOGS.APPLICATION_FORM_EDIT_ITEM.HIDDEN_DEPENDENCY_DESCRIPTION' | translate}}
               </div>
             </div>
           </div>
