AdminGUI - application form item dependencies
* From now, it is possible to select newly added items as dependencies
for other items. For the newly added items, we generate negative fake
ids. Backend is able to recognize these ids and will set the
dependencies accordingly.

--- a/apps/admin-gui/src/app/vos/components/application-form-list/application-form-list.component.html
+++ b/apps/admin-gui/src/app/vos/components/application-form-list/application-form-list.component.html
@@ -185,11 +185,11 @@
         <tr
           *matRowDef="let applicationFormItem; columns: displayedColumns;"
           [cdkDragData]="applicationFormItem"
-          [class.make-green]="applicationFormItem.id == 0"
+          [class.make-green]="applicationFormItem.id <= 0"
           [class.make-red]="applicationFormItem.forDelete"
           [class.make-yellow]="itemsChanged.indexOf(applicationFormItem.id) != -1
                           && !applicationFormItem.forDelete
-                          && applicationFormItem.id != 0"
+                          && applicationFormItem.id > 0"
           cdkDrag
           mat-row>
         </tr>
